--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
 
-      "name": "lonely king bot ",
+      "name": "kiara bot ",
 
       "description": "Telegram group management bot.",
 
-      "logo": "https://telegra.ph/file/2bc7bec8308bdcf9512d6.jpg",
+      "logo": "https://telegra.ph/file/1b09d9f78d261a3afd87e.jpg",
 
       "keywords": [
 
@@ -20,7 +20,7 @@
 
       ],   
 
-   "repository": "https://github.com/proTamizhan/thanimaibotgit",
+   "repository": "https://github.com/Anish-ai/thanimaibotgit",
 
    "addons": [
 
